Not rendering correctly on iPhone 6

--- a/swiper.css
+++ b/swiper.css
@@ -123,6 +123,7 @@ sizes, pagination, etc.
 	/* Specify Swiper's Size: */
 
 	width:100%;
+    height: 100vh;
 }
 .swiper-slide {
 	/* Specify Slides's Size: */
